# tufao

./: index.html  style.css
pkg/: CMakeLists.txt
ref/: index.html
ref/1.x/: abstracthttpserverrequesthandler_8h_source.html  abstracthttpupgradehandler_8h_source.html  abstractmessagesocket_8h_source.html  annotated.html  class_tufao_1_1_abstract_http_server_request_handler-members.html  class_tufao_1_1_abstract_http_server_request_handler.html  class_tufao_1_1_abstract_http_server_request_handler__inherit__graph.map  class_tufao_1_1_abstract_http_server_request_handler__inherit__graph.md5  class_tufao_1_1_abstract_http_upgrade_handler-members.html  class_tufao_1_1_abstract_http_upgrade_handler.html  class_tufao_1_1_abstract_message_socket-members.html  class_tufao_1_1_abstract_message_socket.html  class_tufao_1_1_class_handler-members.html  class_tufao_1_1_class_handler.html  class_tufao_1_1_class_handler__inherit__graph.md5  class_tufao_1_1_class_handler_manager-members.html  class_tufao_1_1_class_handler_manager.html  class_tufao_1_1_class_handler_manager__inherit__graph.map  class_tufao_1_1_class_handler_manager__inherit__graph.md5  class_tufao_1_1_http_file_server-members.html  class_tufao_1_1_http_file_server.html  class_tufao_1_1_http_plugin_server-members.html  class_tufao_1_1_http_plugin_server.html  class_tufao_1_1_http_server-members.html  class_tufao_1_1_http_server.html  class_tufao_1_1_http_server_plugin-members.html  class_tufao_1_1_http_server_plugin.html  class_tufao_1_1_http_server_request-members.html  (+119 more)
src/: httpfileserver.cpp  httpfileserver.h
(+4 files in other folders)
